# format_llm_tests

./: .gitignore  AGENTS.md  kb_formati_llm.md  pyproject.toml
configs/: experiments.yaml  pricing.yaml
data/: SYNTHETIC_DATASETS.md  build_synthetic_suites.py  synthetic_suite_manifest.jsonl
src/: orchestrator.py  run.py
src/experiments/: __init__.py  validator.py
src/runners/: __init__.py  anthropic_runner.py  base.py  ollama_runner.py  openai_runner.py
src/scoring/: __init__.py  accuracy.py  code_exec.py  cost.py  judge.py  schema_compliance.py
src/suites/: __init__.py  _synthetic.py  base.py
src/suites/classification/: __init__.py
src/suites/extraction/: __init__.py
src/suites/find_replace/: __init__.py
src/suites/long_context/: __init__.py
src/suites/multi_agent/: __init__.py
src/suites/nested_data/: __init__.py
src/suites/reasoning/: __init__.py
src/suites/tabular/: __init__.py
src/templating/: __init__.py  canonical.py  prompt_builder.py  tokens.py
src/templating/renderers/: __init__.py  _helpers.py  csv.py  json.py  markdown.py  plain.py  toon.py  xml.py  yaml.py
tests/: test_canonical.py  test_experiments_config.py  test_orchestrator.py  test_prompt_builder.py  test_renderers.py  test_runners.py  test_scoring.py  test_suites.py
